build/tmp/compileFrcUserProgramOsxx86-64DebugExecutableFrcUserProgramCpp/output.txt
See file:///Users/maximocazares/workspace/Axon/build/tmp/compileFrcUserProgramOsxx86-64DebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramOsxx86-64DebugExecutableFrcUserProgramCpp.
compiling Robot.cpp failed.
In file included from /Users/maximocazares/workspace/Axon/src/main/cpp/Robot.cpp:14:
/Users/maximocazares/workspace/Axon/build/tmp/expandedArchives/wpilibc-cpp-2019.2.1-headers.zip_c5f7002a6c1dfda8aa2899e2594d01fe/TimedRobot.h:14:2: error: #warning is a language extension [-Werror,-Wpedantic]
#warning "TimedRobot.h is deprecated; include frc/TimedRobot.h instead"
 ^
/Users/maximocazares/workspace/Axon/build/tmp/expandedArchives/wpilibc-cpp-2019.2.1-headers.zip_c5f7002a6c1dfda8aa2899e2594d01fe/TimedRobot.h:14:2: warning: "TimedRobot.h is deprecated; include frc/TimedRobot.h instead" [-W#warnings]
1 warning and 1 error generated.

Finished compileFrcUserProgramOsxx86-64DebugExecutableFrcUserProgramCpp, see full log file:///Users/maximocazares/workspace/Axon/build/tmp/compileFrcUserProgramOsxx86-64DebugExecutableFrcUserProgramCpp/output.txt.
